--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
             <img src="images/logo_processed.jpg" alt="Explore Costa Rica Logo" class="logo">
 
         </div>
+        <div class="arrow">
+            <p>Let's Explore
+            </p>
+            <p>↓
+            </p>
+        </div>
        
     </header>
 
@@ -39,31 +45,31 @@
         <h2>Featured Destinations</h2>
         <div class="destination">
             <a href="manuel_antonio.html">
-                <img src="images/manuel_antonio.jpg" alt="Manuel Antonio">
+                <img src="images/ManuelAntonio.jpeg" alt="Manuel Antonio">
                 <h3>Manuel Antonio</h3>
             </a>
             <p>Explore the stunning beaches and lush rainforests of Manuel Antonio National Park.</p>
         </div>
         <div class="destination">
             <a href="arenal.html">
-                <img src="images/arenal.jpg" alt="Arenal Volcano">
+                <img src="images/Arenal.jpeg" alt="Arenal Volcano">
                 <h3>Arenal Volcano</h3>
             </a>
             <p>Experience the majesty of Arenal Volcano and its surrounding hot springs and hiking trails.</p>
         </div>
         <div class="destination">
             <a href="monteverde.html">
-                <img src="images/monteverde.jpg" alt="Monteverde">
+                <img src="images/MonteVerde.avif" alt="Monteverde">
                 <h3>Monteverde</h3>
             </a>
             <p>Visit the cloud forests of Monteverde for an unforgettable eco-tourism adventure.</p>
         </div>
         <div class="destination">
-            <a href="arenal.html">
-                <img src="images/arenal.jpg" alt="Arenal Volcano">
-                <h3>Arenal Volcano</h3>
+            <a href="tortugaisland.html">
+                <img src="images/TortugaIsland.jpeg" alt="Tortuga Isaland ">
+                <h3>Tortuga Island</h3>
             </a>
-            <p>Experience the majesty of Arenal Volcano and its surrounding hot springs and hiking trails.</p>
+            <p>Visit one of the </p>
         </div>
     
     </section>
