--- a/tortugaisland.html
+++ b/tortugaisland.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manuel Antonio - Explore Costa Rica</title>
+    <title>Tortuga Island - Explore Costa Rica</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Manuel Antonio</h1>
+        <h1>Tortuga Island</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -18,8 +18,8 @@
     </header>
     
     <section id="about">
-        <h2>About Manuel Antonio</h2>
-        <p>Explore the stunning beaches and lush rainforests of Manuel Antonio National Park.</p>
+        <h2>About Tortuga Island</h2>
+        <p>Visit the beautiful Island and enjoy a relaxing retreat with great activities.</p>
     </section>
     
     <footer>
