--- a/manuel_antonio.html
+++ b/manuel_antonio.html
@@ -19,9 +19,25 @@
     
     <section id="about">
         <h2>About Manuel Antonio</h2>
-        <p>Explore the stunning beaches and lush rainforests of Manuel Antonio National Park.</p>
+        <p>
+            Established in 1972 to protect the vibrant forests and pristine beaches, Manuel Antonio is a sanctuary for many of Costa Rica's endangered species. Though it’s the smallest of the country’s national parks, covering nearly 1,700 acres of land (683 hectares) and 136,000 acres of ocean (55,000 hectares), it is widely considered one of Costa Rica's top destinations.</p>
     </section>
-    
+
+
+    <section id="tours">
+        <h2>Featured Tours</h2>
+        <div class="tour">
+            <a href="manuelantoniosnorkeling.html">
+                <img src="images/tourmanuelsnor.webp" alt="Snorkeling tour">
+                <h3>CATAMARAN & SNORKELING</h3>
+            </a>
+            <p>Take a dip in the ocean, enjoy some drinks and a meal with friends, and you might even catch sight of dolphins, whales, and various marine bird species along the way!</p>
+        </div>
+
+        </div>
+
+
+    </section>
     <footer>
         <p>&copy; 2024 Explore Costa Rica. All rights reserved.</p>
     </footer>
